2010-04-09  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Darin Adler.

        Changed expectation for text status for HTTP status of 4xx following
        a fix for localized status messages.
        https://bugs.webkit.org/show_bug.cgi?id=37274

        * platform/mac/http/tests/xmlhttprequest/web-apps/013-expected.txt:
        * platform/mac/http/tests/xmlhttprequest/xmlhttprequest-missing-file-exception-expected.txt:
2010-04-09  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Darin Adler.

        Fixed ResourceError::failingURL() and ResourceResponse::httpStatusText()
        to return meaningful values.
        https://bugs.webkit.org/show_bug.cgi?id=37274

        * platform/network/mac/ResourceErrorMac.mm:
        (WebCore::ResourceError::platformLazyInit):
        * platform/network/mac/ResourceResponseMac.mm:
        (WebCore::ResourceResponse::platformLazyInit):

Canonical link: https://commits.webkit.org/48643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57351 268f45cc-cd09-0410-ab3c-d52691b4dbfc