WebCore/platform/network/mac/ResourceErrorMac.mm
@@ -47,9 +47,9 @@ void ResourceError::platformLazyInit()
     NSString* failingURLString = [[m_platformError.get() userInfo] valueForKey:@"NSErrorFailingURLStringKey"];
     if (!failingURLString)
         failingURLString = [[[m_platformError.get() userInfo] valueForKey:@"NSErrorFailingURLKey"] absoluteString];
-    
+    m_failingURL = failingURLString; 
     // Workaround for <rdar://problem/6554067>
-    m_localizedDescription = failingURLString;
+    m_localizedDescription = m_failingURL;
     BEGIN_BLOCK_OBJC_EXCEPTIONS;
     m_localizedDescription = [m_platformError.get() _web_localizedDescription];
     END_BLOCK_OBJC_EXCEPTIONS;
